<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">
    <string name="app_name" translatable="false">OneURL</string>
    <string name="leo" translatable="false">Leonard Lemke</string>
    <string name="leo_job" translatable="false">Softwaredeveloper</string>
    <string name="email" translatable="false">oneurl@leonard-lemke.com</string>
    <string name="my_website" translatable="false">https://www.leonard-lemke.com</string>
    <string name="my_insta" translatable="false">https://www.instagram.com/lemkinator5/</string>
    <string name="my_github" translatable="false">https://github.com/Lemkinator</string>
    <string name="github" translatable="false">Github</string>
    <string name="privacy_website" translatable="false">https://www.leonard-lemke.com/apps/oneurl/privacy-policy</string>
    <string name="playstore" translatable="false">Play Store</string>
    <string name="playstore_developer_page_link" translatable="false">https://play.google.com/store/apps/dev?id=4759149701353957861</string>
    <string name="playstore_app_link" translatable="false">market://details?id=</string>
    <string name="playstore_link" translatable="false">https://play.google.com/store/apps/details?id=</string>
    <string name="oneui_library_github" translatable="false">OneUI-Project Github</string>
    <string name="oneui_github_link" translatable="false">https://github.com/OneUIProject</string>
    <string name="rick_roll_troll_link" translatable="false">https://www.leonard-lemke.com/rr</string>
    <string name="help">Help</string>
    <string name="contact_me">Contact me (e-mail)</string>
    <string name="help_text">OneURL respects your privacy and does not store any personal information. For more information, please refer to our Privacy Policy. \nThe use of OneURL to shorten URLs is subject to the terms of use of the respective services provided by third-party providers. Please consult the terms and conditions of each service provider to learn more about their policies and restrictions.\n\nCosts and Rate Limits:\nThe providers available in the app are free of charge. Some providers therefore have rate limits. Exceeding the rate limit can lead to temporary or permanent blocking of your IP address with a provider. Please note that this blocking is managed by the service providers themselves.\nNormally, these limits should not be reached as a normal user. We recommend to respect the rate limits of the service providers and not to exceed them intentionally to ensure a seamless usage.</string>
    <string name="provider_info">Provider info</string>
    <string name="redirect_hint">Hint before redirecting</string>
    <string name="redirect_hint_text">Before redirecting, this provider displays a hint that informs the user about the destination URL.</string>
    <string name="redirect_hint_vgd">Before redirecting, v.gd displays a hint that informs the user about the destination URL. The user has the option to click on the displayed URL before the redirection takes place. It is also possible to skip this notice in future.</string>
    <string name="analytics_dagd">The provider da.gd offers the possibility to use analytics to get insights into the performance of the shortened links. With da.gd, the links must have been accessed at least once within the last 60 days, otherwise an error will be displayed (404).</string>
    <string name="analytics_vgd_isgd">The providers v.gd and is.gd offer the possibility to use analytics to get insights into the performance of the shortened links.</string>
    <string name="analytics_owovc">The provider owo.vc offers the possibility to use analytics to get insights into the performance of the shortened links.</string>
    <string name="analytics_spoome">The provider spoo.me offers the possibility to use analytics to get insights into the performance of the shortened links.</string>
    <string name="alias_dagd">The individual aliases can have a length between 1 and 10 characters and may only consist of the characters a–z, A–Z, 0–9 and the underscore (_). This feature allows users to create personalized and easy-to-remember aliases for their links.</string>
    <string name="alias_vgd_isgd_tinyurl">The individual aliases can have a length between 5 and 30 characters and may only consist of the characters a–z, A–Z, 0–9 and the underscore (_). This feature allows users to create personalized and easy-to-remember aliases for their links.</string>
    <string name="alias_kurzelinks">The individual aliases can have a length between 5 and 100 characters and may only consist of the characters a–z, A–Z, 0–9, -, _. This feature allows users to create personalized and easy-to-remember aliases for their links.</string>
    <string name="alias_ulvis">The individual aliases can have a length between 1 and 60 characters and may only consist of the characters a–z, A–Z and 0–9. This feature allows users to create personalized and easy-to-remember aliases for their links.</string>
    <string name="alias_oneptco">The individual aliases may only consist of the characters a–z, A–Z, 0–9 and the underscore (_). This feature allows users to create personalized and easy-to-remember aliases for their links.</string>
    <string name="alias_spoome">The individual aliases can have a length between 1 and 15 characters and may only consist of the characters a–z, A–Z, 0–9, -, _. This feature allows users to create personalized and easy-to-remember aliases for their links.</string>
    <string name="alias_l4f">The individual aliases can have a length between 3 and 100 characters and may only consist of the characters a–z, A–Z and 0–9. This feature allows users to create personalized and easy-to-remember aliases for their links.</string>
    <string name="privacy_kurzelinks">These providers have been designed to be as data efficient as possible. They are operated from Germany and comply with the applicable privacy regulations in Germany and Europe.</string>
    <string name="currently_disabled">Currently disabled</string>
    <string name="currently_disabled_ulvis">The provider ulvis.net is currently disabled because a security check has been added which makes it more difficult to use.</string>
    <string name="emoji">Emoji</string>
    <string name="emoji_text">This URL shortener uses emojis to create personalized and easy-to-remember links. When specifying an alias, only emojis are allowed.</string>
    <string name="owovc_fun">Entertainment</string>
    <string name="owovc_fun_text">In addition to the normal URL shortener, owo.vc also offers other URL shorteners. These are intended for entertainment purposes and should be used respectfully, responsibly and with caution.</string>
    <string name="owovc_zws">The URL shortener \"owo.vc (zws)\" uses Zero-Width Spaces in the generated links. These spaces are invisible, which is why all links appear the same (\"owo.vc/\"). When copying and pasting in certain apps, these spaces may be removed. In such cases, the standard owo.vc page will open instead of the intended destination URL. Therefore, use this service with caution.</string>
    <string name="owovc_sketchy">The URL shortener \"owo.vc (sketchy)\" generates suspicious-looking URLs containing keywords like \"bank-login\", \"password\", \"hidden\", \"grab\" or \"account\" along with popular website names.</string>
    <string name="owovc_gay">The URL shortener \"owo.vc (gay)\" employs offensive and sexist language and may represent inappropriate or offensive content. Be aware that the generated links may contain sexist terms and could be considered offensive and disrespectful by others. Use this service with respect and responsibility.</string>
    <string name="zwsim_zws">The URL shortener \"zws.im\" uses Zero-Width Spaces in the generated links. These spaces are invisible, which is why all links appear the same (\"zws.im/\"). When copying and pasting in certain apps, these spaces may be removed. In such cases, the standard zws.im page will open instead of the intended destination URL. Therefore, use this service with caution.</string>
    <string name="tly_info">This URL shortener utilizes multiple domains for the same service, meaning it may generate short URLs with different domain names (e.g., tinyurl.com). As a result, please use this service with caution.</string>
    <string name="warning">Warning</string>
    <string name="info">Info</string>
    <string name="experimental">Experimental</string>
    <string name="app_description">A URL-Shortener and QR code generator with OneUI-Design.</string>
    <string name="about_app">About OneURL</string>
    <string name="open_in_playstore">Open in Play Store</string>
    <string name="about_me">About me</string>
    <string name="write_email">Write an e-mail</string>
    <string name="tiktok" translatable="false">TikTok</string>
    <string name="website">Website</string>
    <string name="support_me_text">If you want to support me in any way, feel free to send me an e-mail</string>
    <string name="support_me">Support me</string>
    <string name="rate_app">Rate app in Play Store</string>
    <string name="write_review">Write a review</string>
    <string name="share">Share</string>
    <string name="share_app">Share this app</string>
    <string name="useful_links">Useful links</string>
    <string name="design">Design</string>
    <string name="system_default">System default</string>
    <string name="general">General</string>
    <string name="language">Language</string>
    <string name="change_language">Change app language</string>
    <string name="change_language_not_supported_by_device">Change language is not supported by your device.</string>
    <string name="press_again_to_exit">Press again to exit.</string>
    <string name="delete_appdata_and_exit">Delete App-Data and exit</string>
    <string name="delete_appdata_and_exit_warning">Attention: This will delete all personal data. Continue? </string>
    <string name="dev_options">Developer options</string>
    <string name="more_information">More Information</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="report_bug">Report bug or improvement</string>
    <string name="save_location">File storage location</string>
    <string name="custom">Custom</string>
    <string name="oobe_onboard_msg1_title">Beautiful design</string>
    <string name="oobe_onboard_msg2_title">Free</string>
    <string name="oobe_onboard_msg3_title">No ads</string>
    <string name="oobe_onboard_msg2_summary">No subscriptions, no in-app purchases, no costs at all.</string>
    <string name="oobe_onboard_msg3_summary">No annoying ads.</string>
    <string name="tos">Terms of Service</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="generate_qr_code">Generate QR-Code</string>
    <string name="url">URL</string>
    <string name="remove_from_fav">Remove from favorites</string>
    <string name="add_to_fav">Add to favorites</string>
    <string name="delete">Delete</string>
    <string name="show_all">Show all</string>
    <string name="only_show_favorites">Only show favorites</string>
</resources>