<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AppCompatResource">

    <item
        android:id="@+id/menu_item_delete"
        android:icon="@drawable/ic_oui_delete_outline"
        android:title="@string/delete"
        tools:ignore="AlwaysShowAction,AppCompatResource"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_item_add_to_favorites"
        android:icon="@drawable/ic_oui_favorite_on"
        android:title="@string/add_to_fav"
        tools:ignore="AlwaysShowAction,AppCompatResource"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_item_remove_from_favorites"
        android:icon="@drawable/ic_oui_favorite_off"
        android:title="@string/remove_from_fav"
        app:showAsAction="always"
        tools:ignore="AppCompatResource" />
</menu>