<?xml version="1.0" encoding="utf-8"?>
<dev.oneuiproject.oneui.layout.ToolbarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/toolbar_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:expanded="false"
    app:navigationIcon="@drawable/ic_oui_back"
    app:subtitle="@string/app_name"
    app:title="@string/generate_qr_code">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/url"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/secondary_text_icon_color_themed">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextURL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/qr_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:contentDescription="QR Code"
                android:transitionName="qr"
                tools:ignore="HardcodedText" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/qr_save_button"
                    style="@style/ButtonStyle.Transparent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_oui_save_outline" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/qr_copy_button"
                    style="@style/ButtonStyle.Transparent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_oui_copy_outline" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/qr_share_button"
                    style="@style/ButtonStyle.Transparent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_oui_share_outline"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</dev.oneuiproject.oneui.layout.ToolbarLayout>


