<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_location="drawer_panel">

    <LinearLayout
        android:id="@+id/drawerListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/drawer_item_selector"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/drawerItemQr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/drawer_item_list_ripple"
            android:gravity="center_vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:gravity="start|center"
                android:paddingEnd="14dp"
                android:src="@drawable/ic_oui_qr_code"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/drawerItemQrTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="marquee"
                android:paddingVertical="12dp"
                android:singleLine="true"
                android:text="@string/generate_qr_code"
                android:textColor="?android:textColorPrimary"
                android:textSize="17sp" />

        </LinearLayout>

        <View style="@style/DrawerDividerStyle" />

        <LinearLayout
            android:id="@+id/drawerItemHelp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/drawer_item_list_ripple"
            android:gravity="center_vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:gravity="start|center"
                android:paddingEnd="14dp"
                android:src="@drawable/ic_oui_help_outline"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/drawerItemHelpTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="marquee"
                android:paddingVertical="12dp"
                android:singleLine="true"
                android:text="@string/help"
                android:textColor="?android:textColorPrimary"
                android:textSize="17sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/drawerItemAboutApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/drawer_item_list_ripple"
            android:gravity="center_vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:gravity="start|center"
                android:paddingEnd="14dp"
                android:src="@drawable/ic_oui_info_outline"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/drawerItemAboutAppTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="marquee"
                android:paddingVertical="12dp"
                android:singleLine="true"
                android:text="@string/about_app"
                android:textColor="?android:textColorPrimary"
                android:textSize="17sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/drawerItemAboutMe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/drawer_item_list_ripple"
            android:gravity="center_vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:gravity="start|center"
                android:paddingEnd="14dp"
                android:src="@drawable/ic_oui_contact_outline"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/drawerItemAboutMeTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="marquee"
                android:paddingVertical="12dp"
                android:singleLine="true"
                android:text="@string/about_me"
                android:textColor="?android:textColorPrimary"
                android:textSize="17sp" />

        </LinearLayout>

        <View style="@style/DrawerDividerStyle" />

        <LinearLayout
            android:id="@+id/drawerItemSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/drawer_item_list_ripple"
            android:gravity="center_vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:gravity="start|center"
                android:paddingEnd="14dp"
                android:src="@drawable/ic_oui_settings_outline"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/drawerItemSettingsTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="marquee"
                android:paddingVertical="12dp"
                android:singleLine="true"
                android:text="@string/settings"
                android:textColor="?android:textColorPrimary"
                android:textSize="17sp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>